[gd_scene load_steps=6 format=3 uid="uid://bk5gphn7ma6ij"]

[ext_resource type="Script" uid="uid://b784bbl1ctbdf" path="res://prefabs/test/battle/single_move_sprite_tester.gd" id="1_sjw45"]
[ext_resource type="Resource" uid="uid://sry7xhm5t76o" path="res://gamedata/moves/crooked_curse/rune/trigger_sprite_rune_crooked_curse.tres" id="2_pxbgf"]
[ext_resource type="PackedScene" uid="uid://cjw6dl387qwra" path="res://prefabs/ui/inventory/move_learn_anim_controller.tscn" id="2_y6kky"]
[ext_resource type="PackedScene" uid="uid://dmc2ox37dega8" path="res://prefabs/audio/audio_handler.tscn" id="3_casjv"]
[ext_resource type="Resource" uid="uid://206otuqdhqhy" path="res://gamedata/combatants/mystic_scorpion/mystic_scorpion.tres" id="3_uluwa"]

[node name="SingleMoveSpriteTester" type="Node2D"]
script = ExtResource("1_sjw45")
moveAnimSprite = ExtResource("2_pxbgf")
targetCombatant = ExtResource("3_uluwa")

[node name="MoveLearnAnimControl" parent="." instance=ExtResource("2_y6kky")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -90.0
offset_right = 1120.0
offset_bottom = 390.0
scale = Vector2(0.25, 0.25)
disableHpTags = false
playAnimAfterLoad = false
delayAnimAfterLoad = false
moveCombatantsIfAlone = false

[node name="BattleAnimationManager" parent="MoveLearnAnimControl/BattlefieldBorder" index="0"]
position = Vector2(640, 295)
scale = Vector2(4, 4)

[node name="SurgeParticleEmitter" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/PlayerCombatant/SpriteContainer/BehindParticleContainer" index="0"]
startParticlesOnLoad = null

[node name="BehindParticleEmitter" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/PlayerCombatant/SpriteContainer/BehindParticleContainer" index="1"]
startParticlesOnLoad = null

[node name="FrontParticleEmitter" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/PlayerCombatant/SpriteContainer/FrontParticleContainer" index="0"]
startParticlesOnLoad = null

[node name="HitParticleEmitter" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/PlayerCombatant/SpriteContainer/FrontParticleContainer" index="1"]
startParticlesOnLoad = null

[node name="ShardParticleEmitter" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/PlayerCombatant/SpriteContainer/FrontParticleContainer" index="2"]
startParticlesOnLoad = null

[node name="SurgeParticleEmitter" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/MinionCombatant/SpriteContainer/BehindParticleContainer" index="0"]
startParticlesOnLoad = null

[node name="BehindParticleEmitter" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/MinionCombatant/SpriteContainer/BehindParticleContainer" index="1"]
startParticlesOnLoad = null

[node name="FrontParticleEmitter" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/MinionCombatant/SpriteContainer/FrontParticleContainer" index="0"]
startParticlesOnLoad = null

[node name="HitParticleEmitter" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/MinionCombatant/SpriteContainer/FrontParticleContainer" index="1"]
startParticlesOnLoad = null

[node name="ShardParticleEmitter" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/MinionCombatant/SpriteContainer/FrontParticleContainer" index="2"]
startParticlesOnLoad = null

[node name="SurgeParticleEmitter" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/EnemyCombatant1/SpriteContainer/BehindParticleContainer" index="0"]
startParticlesOnLoad = null

[node name="BehindParticleEmitter" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/EnemyCombatant1/SpriteContainer/BehindParticleContainer" index="1"]
startParticlesOnLoad = null

[node name="FrontParticleEmitter" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/EnemyCombatant1/SpriteContainer/FrontParticleContainer" index="0"]
startParticlesOnLoad = null

[node name="HitParticleEmitter" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/EnemyCombatant1/SpriteContainer/FrontParticleContainer" index="1"]
startParticlesOnLoad = null

[node name="ShardParticleEmitter" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/EnemyCombatant1/SpriteContainer/FrontParticleContainer" index="2"]
startParticlesOnLoad = null

[node name="SurgeParticleEmitter" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/EnemyCombatant2/SpriteContainer/BehindParticleContainer" index="0"]
startParticlesOnLoad = null

[node name="BehindParticleEmitter" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/EnemyCombatant2/SpriteContainer/BehindParticleContainer" index="1"]
startParticlesOnLoad = null

[node name="FrontParticleEmitter" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/EnemyCombatant2/SpriteContainer/FrontParticleContainer" index="0"]
startParticlesOnLoad = null

[node name="HitParticleEmitter" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/EnemyCombatant2/SpriteContainer/FrontParticleContainer" index="1"]
startParticlesOnLoad = null

[node name="ShardParticleEmitter" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/EnemyCombatant2/SpriteContainer/FrontParticleContainer" index="2"]
startParticlesOnLoad = null

[node name="SurgeParticleEmitter" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/EnemyCombatant3/SpriteContainer/BehindParticleContainer" index="0"]
startParticlesOnLoad = null

[node name="BehindParticleEmitter" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/EnemyCombatant3/SpriteContainer/BehindParticleContainer" index="1"]
startParticlesOnLoad = null

[node name="FrontParticleEmitter" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/EnemyCombatant3/SpriteContainer/FrontParticleContainer" index="0"]
startParticlesOnLoad = null

[node name="HitParticleEmitter" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/EnemyCombatant3/SpriteContainer/FrontParticleContainer" index="1"]
startParticlesOnLoad = null

[node name="ShardParticleEmitter" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/EnemyCombatant3/SpriteContainer/FrontParticleContainer" index="2"]
startParticlesOnLoad = null

[node name="BattlefieldShade" parent="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager" index="8"]
offset_left = -160.0
offset_top = -74.0
offset_right = 160.0
offset_bottom = 46.0

[node name="PlayerSoloPos" parent="MoveLearnAnimControl" index="1"]
position = Vector2(513.001, 198)

[node name="PlayerMultiPos" parent="MoveLearnAnimControl" index="2"]
position = Vector2(511, 264)

[node name="Enemy1SoloPos" parent="MoveLearnAnimControl" index="3"]
position = Vector2(751, 195)

[node name="Enemy1MultiPos" parent="MoveLearnAnimControl" index="4"]
position = Vector2(751, 244)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)

[node name="AudioHandler" parent="." instance=ExtResource("3_casjv")]

[node name="PlayButton" type="Button" parent="."]
offset_left = -26.0
offset_top = 48.0
offset_right = 26.0
offset_bottom = 79.0
text = "Play"

[node name="SwapButton" type="Button" parent="."]
offset_left = 74.0
offset_top = 48.0
offset_right = 132.0
offset_bottom = 79.0
toggle_mode = true
text = "Swap"

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="SwapButton" to="." method="_on_swap_button_pressed"]
[connection signal="toggled" from="SwapButton" to="." method="_on_swap_button_toggled"]

[editable path="MoveLearnAnimControl"]
[editable path="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager"]
[editable path="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/PlayerCombatant"]
[editable path="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/PlayerCombatant/SpriteContainer/FrontParticleContainer/HitParticleEmitter"]
[editable path="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/PlayerCombatant/HPTag/OrbDisplay"]
[editable path="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/MinionCombatant"]
[editable path="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/MinionCombatant/SpriteContainer/FrontParticleContainer/HitParticleEmitter"]
[editable path="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/MinionCombatant/HPTag/OrbDisplay"]
[editable path="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/EnemyCombatant1"]
[editable path="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/EnemyCombatant1/SpriteContainer/FrontParticleContainer/HitParticleEmitter"]
[editable path="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/EnemyCombatant1/HPTag/OrbDisplay"]
[editable path="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/EnemyCombatant2"]
[editable path="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/EnemyCombatant2/SpriteContainer/FrontParticleContainer/HitParticleEmitter"]
[editable path="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/EnemyCombatant2/HPTag/OrbDisplay"]
[editable path="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/EnemyCombatant3"]
[editable path="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/EnemyCombatant3/SpriteContainer/FrontParticleContainer/HitParticleEmitter"]
[editable path="MoveLearnAnimControl/BattlefieldBorder/BattleAnimationManager/EnemyCombatant3/HPTag/OrbDisplay"]
